--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -223,13 +223,17 @@ jobs:
         working-directory: go-sqlite3/
       - run: |
           mkdir -p tools/
-          [ -d "tools/wasi-sdk"* ]         || curl -#L "$WASI_SDK" | tar xzC tools &
-          [ -d "tools/binaryen-version"* ] || curl -#L "$BINARYEN" | tar xzC tools &
+          [ -d "tools/wasi-sdk" ] || curl -#L "$WASI_SDK" | tar xzC tools &
+          [ -d "tools/binaryen" ] || curl -#L "$BINARYEN" | tar xzC tools &
           wait
+
+          mv "tools/wasi-sdk"* "tools/wasi-sdk"
+          mv "tools/binaryen"* "tools/binaryen"
+
           sqlite3/download.sh
           embed/build.sh
         env:
-          WASI_SDK: "https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-23/wasi-sdk-23.0-linux.tar.gz"
+          WASI_SDK: "https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-23/wasi-sdk-23.0-x86_64-linux.tar.gz"
           BINARYEN: "https://github.com/WebAssembly/binaryen/releases/download/version_118/binaryen-version_118-x86_64-linux.tar.gz"
         working-directory: go-sqlite3/
       - uses: actions/checkout@v4
