Explicitly test that SQLite version 3.31.1 is compatible with sqlite-vec when statically compiling

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -135,3 +135,9 @@ jobs:
         with:
           name: sqlite-vec-cosmopolitan
           path: dist/*
+  test-minimum:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: make test
+        working-directory: tests/test-minimum
