gha: ensure sqlite-vec.h, skip msvc stuff

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,6 +50,7 @@ jobs:
           name: sqlite-vec-windows-x86_64-extension
           path: dist/*
   build-windows-x86_64-extension-msvc:
+    if: false
     runs-on: windows-latest
     permissions:
       contents: write
