--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -58,6 +58,7 @@ jobs:
           name: sqlite-vec-windows-x86_64-extension
           path: dist/*
   build-windows-x86_64-extension-msvc:
+    if: false
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
@@ -139,5 +140,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - run: make sqlite-vec.h
       - run: make test
         working-directory: tests/minimum
